[package]
name = "multimap"
version = "0.8.3"
description = "A multimap implementation."
readme = "README.md"
repository = "https://github.com/havarnov/multimap"
license = "MIT/Apache-2.0"
authors = ["Håvar Nøvik <havar.novik@gmail.com>"]
documentation = "https://docs.rs/multimap/"
exclude = [
    ".github/**",
    ".gitignore",
]

[features]
serde_impl = ["serde"]
default = ["serde_impl"]

[dependencies]
serde = { version = "~1.0", optional = true }
smallvec = "1.8.0"

[dev-dependencies]
serde_test = "~1.0"
